<resources>
    <string name="app_name">MyApp</string>
    <string name="elephant">Elephant Valleys Safary</string>
    <string name="share">Share</string>
    <string name="subText">Visite o Zoológico de Aalborg - passeie com leões, balance com macacos e testemunhe comportamentos incríveis de animais.</string>
    <string name="zebra">Zebra Valleys Sarafy</string>
    <string name="learn_more_zebra">Learn More</string>
    <string name="learn_more_elephant">Learn More</string>
    <string name="assam">Assam</string>
    <string name="current_location">Current Location</string>
    <string name="_25">25°</string>
    <string name="seta">seta</string>
    <string name="_18">18%</string>
    <string name="nuvem">nuvem</string>
    <string name="_11_25_am">11:25 AM</string>
    <string name="delhi">Delhi</string>
    <string name="darjjeling">Darjjeling</string>
</resources>