<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CDC7B5"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".PaisesActivity">


    <androidx.cardview.widget.CardView
        android:id="@+id/idCardElephant"
        android:layout_width="350dp"
        android:layout_height="280dp"
        android:layout_margin="20dp"
        android:focusable="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#60CCC4C4">

            <ImageView
                android:id="@+id/imgCardSafari"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:scaleType="centerCrop"
                android:src="@drawable/sarafi" />

            <TextView
                android:id="@+id/txtSafari"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/imgCardSafari"
                android:layout_centerHorizontal="true"
                android:text="@string/elephant"
                android:textColor="#FFFFFF"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/txtSubSafari"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imgCardSafari"
                android:layout_centerHorizontal="true"
                android:layout_margin="10sp"
                android:gravity="center_horizontal"
                android:text="@string/subText"
                android:textColor="#A8000000"
                android:textSize="12sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnShare"
                style="@style/Widget.AppCompat.ActionButton"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_below="@+id/txtSubSafari"
                android:layout_margin="10sp"
                android:text="@string/share"
                android:textAllCaps="true"
                android:textColor="#3F51B5"
                android:textSize="20sp"
                app:cornerRadius="@dimen/cardview_compat_inset_shadow" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnLearnMore"
                style="@style/Widget.AppCompat.ActionButton"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_below="@+id/txtSubSafari"
                android:layout_alignParentEnd="true"
                android:layout_margin="10sp"
                android:text="@string/learn_more_elephant"
                android:textAllCaps="true"
                android:textColor="#00BCD4"
                android:textSize="20sp"
                app:cornerRadius="@dimen/cardview_compat_inset_shadow" />


        </RelativeLayout>


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="350dp"
        android:layout_height="280dp"
        android:layout_margin="20dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#60CCC4C4">

            <ImageView
                android:id="@+id/imgCardZebra"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:scaleType="centerCrop"
                android:src="@drawable/zebra" />

            <TextView
                android:id="@+id/txtZebra"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/imgCardZebra"
                android:layout_centerHorizontal="true"
                android:text="@string/zebra"
                android:textColor="#FFFFFF"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/txtSubZebra"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imgCardZebra"
                android:layout_centerHorizontal="true"
                android:layout_margin="10sp"
                android:gravity="center_horizontal"
                android:text="@string/subText"
                android:textColor="#A8000000"
                android:textSize="12sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnShareZebra"
                style="@style/Widget.AppCompat.ActionButton"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_below="@+id/txtSubZebra"
                android:layout_margin="10sp"
                android:text="@string/share"
                android:textAllCaps="true"
                android:textColor="#3F51B5"
                android:textSize="20sp"
                app:cornerRadius="@dimen/cardview_compat_inset_shadow" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnLearnMoreZebra"
                style="@style/Widget.AppCompat.ActionButton"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_below="@+id/txtSubZebra"
                android:layout_alignParentEnd="true"
                android:layout_margin="10sp"
                android:text="@string/learn_more_zebra"
                android:textAllCaps="true"
                android:textColor="#00BCD4"
                android:textSize="20sp"
                app:cornerRadius="@dimen/cardview_compat_inset_shadow" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>